# FFmpegDemo

app/: build.gradle
app/src/androidTest/java/com/xk/ffmpegdemp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  safe_queue.cpp  safe_queue.h
app/src/main/cpp/helper/: JavaCallHelper.cpp  JavaCallHelper.h
app/src/main/cpp/player/: MPlayer.cpp  MPlayer.h
app/src/main/cpp/player/channel/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  VideoChannel.cpp  VideoChannel.h
app/src/main/cpp/utils/: safe_queue.h
app/src/main/java/com/xk/ffmpegdemp/: MainActivity.java
app/src/main/java/com/xk/ffmpegdemp/player/: MPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xk/ffmpegdemp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
